--- a/server/package.json
+++ b/server/package.json
@@ -8,18 +8,19 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "sql.js": "^1.10.0",
+    "express": "^4.18.2",
     "node-cron": "^3.0.3",
-    "resend": "^2.1.0"
+    "resend": "^2.1.0",
+    "sql.js": "^1.10.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
     "@types/node-cron": "^3.0.11",
+    "@types/sql.js": "^1.4.9",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
