fix: Darker colors, cleaner UI, GitHub-style heatmap, working push notifications

--- a/server/.env.example
+++ b/server/.env.example
@@ -12,3 +12,9 @@ RESEND_API_KEY=your_resend_api_key
 
 # Database
 DATABASE_URL=./data/database.sqlite
+
+# Push Notifications (Web Push)
+# Generate with: npx web-push generate-vapid-keys
+VAPID_PUBLIC_KEY=your_vapid_public_key
+VAPID_PRIVATE_KEY=your_vapid_private_key
+VAPID_SUBJECT=mailto:your@email.com
