--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
     "resend": "^2.1.0",
-    "sql.js": "^1.10.0"
+    "sql.js": "^1.10.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -21,6 +22,7 @@
     "@types/node": "^20.10.5",
     "@types/node-cron": "^3.0.11",
     "@types/sql.js": "^1.4.9",
+    "@types/web-push": "^3.6.4",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
